Pseudo element anchor name fix.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <h1>HTML / CSS Practice</h1>
       <ul class="learn-list">
         <li class="learn-bullet"><a class="learn-shortcut" href="#cssGrid">CSS Grid</a></li>
-        <li class="learn-bullet"><a class="learn-shortcut" href="#cssGrid">Before / After content replacement</a></li>
+        <li class="learn-bullet"><a class="learn-shortcut" href="#pseudoElements">Pseudo Elements: Before / After content replacement</a></li>
         <li class="learn-bullet"><a class="learn-shortcut" href="#">Flexbox</a></li>
         <li class="learn-bullet"><a class="learn-shortcut" href="#">Form Layout</a></li>
         <li class="learn-bullet"><a class="learn-shortcut" href="#">Table color coordination</a></li>
