--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 
       
       <h2>CSS Efficiency</h2>
-      <p>CSS is read from right to left so it is more efficient to use fewer selectors.</p>
+      <p>CSS is read from right to left so it is more efficient to use fewer selectors to reduce the amount of searches triggered.</p>
       <p>Care of batching</p>
 
       <p>Most inefficient selector</p>
